tests/snapshots/cli_configure_repository__cli_replace_stdout.snap
---
source: tests/cli_configure_repository.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Repository replaced successfully - new alias: 'posit', URL: https://packagemanager.posit.co/cran/latest
