tests/snapshots/cli_configure_repository__cli_update_by_url_config.snap
---
source: tests/cli_configure_repository.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    { alias = "matched-by-url", url = "https://packagemanager.posit.co/cran/2024-12-16/" }
]
dependencies = [
    "dplyr",
]
