tests/snapshots/cli_configure_repository__cli_update_by_url_stdout.snap
---
source: tests/cli_configure_repository.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Repository 'matched-by-url' updated successfully
