tests/snapshots/cli_configure_repository__cli_update_force_source_stdout.snap
---
source: tests/cli_configure_repository.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Repository 'posit' updated successfully
