tests/snapshots/cli_configure_repository__cli_update_url_config.snap
---
source: tests/cli_configure_repository.rs
expression: result
---
[project]
name = "test"
r_version = "4.4"
repositories = [
    { alias = "posit", url = "https://packagemanager.posit.co/cran/latest" }
]
dependencies = [
    "dplyr",
]
